--- a/React-project/Experiment-0/src/index.css
+++ b/React-project/Experiment-0/src/index.css
@@ -66,3 +66,14 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+#product-card{
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 16px;
+  max-width: 300px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  background-color:rgb(66, 66, 141);
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
