--- a/React-project/Experiment-7.2/src/index.css
+++ b/React-project/Experiment-7.2/src/index.css
@@ -1,6 +1,6 @@
 /* index.css or App.css */
 body {
-  background-color: white; /* White background */
+  background-color: black; /* White background */
   color: black;            /* Black text */
   margin: 0;
   font-family: Arial, sans-serif;
